<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <GridView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:columnWidth="60dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="10dp"
              android:horizontalSpacing="10dp"
              android:stretchMode="none"
              android:id="@+id/grid_pack"
              android:listSelector="@android:color/black"
              android:padding="10dp"
              android:layout_weight="1">
    </GridView>

    <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="0"
                  android:id="@+id/string_chosen"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="0"
              android:id="@+id/string_percent"/>

    <Button android:id="@+id/show_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_stat_button"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="0">

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_ok"
                android:text="@string/ok"
                android:layout_weight="1"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>